--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="assets/favicon.ico">
+    <link rel="icon" href="assets/favicon.icon">
 
     <title>Success media : ติดต่อ</title>
 
@@ -21,14 +21,16 @@
     <header>
         <div class="header-zone">
            <div class="row">
-	            <div class="text-left header-left bg-BG1 col-md-10">
-			       <img class="" src="assets/img/Logo1.png" alt="successLogo" width="250" height="150">
-			    </div>
+             <div class="text-left header-left bg-BG1 col-md-10">
+             <a href="index.html">
+             <img class="" src="assets/img/Logo1.png" alt="successLogo" width="250" height="150">
+             </a>
+         </div>
 			    <div class="header-right col-md-2">
 			        <ul class="list-unstyled">
-			            <li class="mb-2 mt-2"> <a href="#Facebook-icon" class=""> <img class="" src="assets/img/Facebook-icon.jpg" alt="facebook-icon" width="30" height="30">www.facebook.com/sc.media.cm</li></a>
-			            <li class="mb-2 mt-2"> <a href="#line-icon" class=""> <img class="" src="assets/img/line-icon.jpg" alt="line-icon" width="30" height="30">vhan5581</li></a>
-			            <li class="mb-2 mt-2"> <a href="#phone-icon" class=""> <img class="" src="assets/img/phone-icon.png" alt="phone-icon" width="30" height="30">053-327044</li></a>
+			            <li class="mb-2 mt-2"> <a href="http://www.facebook.com/sc.media.cm" class=""> <img class="" src="assets/img/Facebook-icon.jpg" alt="facebook-icon" width="30" height="30">sc.media.cm</a></li>
+			            <li class="mb-2 mt-2"> <a href="#line-icon" class=""> <img class="" src="assets/img/line-icon.jpg" alt="line-icon" width="30" height="30">vhan5581</a></li>
+			            <li class="mb-2 mt-2"> <a href="tel:053-327044" class=""> <img class="" src="assets/img/phone-icon.png" alt="phone-icon" width="30" height="30">053-327044</a></li>
 			        </ul>
 			    </div>
 		    </div>
@@ -55,23 +57,22 @@
                    <a class="dropdown-item" href="vinin.html">ไวนิล</a>
                    <a class="dropdown-item" href="stwork.html">สติ๊กเกอร์</a>
                    <a class="dropdown-item" href="light.html">ตู้ไฟ</a>
-                   <a class="dropdown-item" href="nam.html">นามบัตร</a>
-                   <a class="dropdown-item" href="kong.html">โครงเหล็ก</a>
+                   <a class="dropdown-item" href="nam.html">อคริลิค</a>
+                   <a class="dropdown-item" href="kong.html">พลาสวูด</a>
                  </div>
            </li>
            <li class="nav-item px-5">
              <a class="nav-link px-5" href="about.html">เกี่ยวกับ</a>
            </li>
-           <li class="nav-item">
-             <a class="nav-link active px-5" href="content.html">ติดต่อ</a>
+           <li class="nav-item px-5">
+             <a class="nav-link active px-5" href="contact.html">ติดต่อ</a>
            </li>
          </ul>
        </div>
      </nav>
           <!--ITEM ZONE-->
           <div class="container">
-            <hr>
-            <div class="container">
+            <br>
               <div class=" col-lg-4 container mb-12">
                 <a href="assets/img-contact/boss.jpg" class="image-link" >
                 <img src="assets/img-contact/boss.jpg" class="img-fluid" alt="Image 1">
@@ -79,23 +80,27 @@
                   <div class="text-center font-special-style display-4 text-success1">
                   <h1>เจ้าของกิจการ</h1></div>
                   <div class="text-center font-special-style text-success1">
-                  <h1>คุณยอดชัย ผดุงศฺลป์</h1></div>
+                  <h1>คุณยอดชัย ผดุงศิลป์</h1></div>
                 </div>
               </div>
-            </div>
                   <br>
-                    <div class="col-md-12">
-                    <div class="text-center font-special-style text-success1">
-                    <h1>ที่อยู่ : 17/3 ถนนจ่าบ้าน ตำบลศรีภูมิ อำเภอเมือง จังหวัดเชียงใหม่</h1>
-                    <h1>Tel : 053-327044</h1>
-                    <h1>Line : vhan5581</h1>
-                    <h1>Facebook : www.facebook.com/sc.media.cm</h1>
-                    </div>
-                   </div>
+                   <div class="container">
+                     <div class="row">
+                    <div class="col-md-4 offset-md-4">
+                    <div class="text-success1 well">
+                        <ul>
+                          <li>ที่อยู่ : 17/3 ถนนจ่าบ้าน ตำบลศรีภูมิ อำเภอเมือง จังหวัดเชียงใหม่</li>
+                          <li class="mb-2 mt-2"> tel:053-327044</li>
+                          <li class="mb-2 mt-2"> vhan5581</li>
+                          <li class="mb-2 mt-2"> <a href="http://www.facebook.com/sc.media.cm" class="">sc.media.cm</a></li>
+                       </ul>
+                  </div>
+                  </div>
+                  </div>
+                  </div>
           <!--END ITEM-->
           <div class="bg-footer">
             <div class="container pb-3">
-              <hr>
               <h1 class="display-2 text-center font-special-style text-success1">แผนที่</h1>
               <div id="map"></div>
             </div>
