--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="assets/favicon.ico">
-
+    <link rel="icon" href="assets/favicon.icon">
     <title>Success media : หน้าหลัก</title>
 
     <!-- Bootstrap core CSS -->
@@ -24,13 +23,15 @@
         <div class="header-zone">
            <div class="row">
 	            <div class="text-left header-left bg-BG1 col-md-10">
-			       <img class="" src="assets/img/Logo1.png" alt="successLogo" width="250" height="150">
+              <a href="index.html">
+			        <img class="" src="assets/img/Logo1.png" alt="successLogo" width="250" height="150">
+              </a>
 			    </div>
-			    <div class="header-right col-md-2">
+          <div class="header-right col-md-2">
 			        <ul class="list-unstyled">
-                <li class="mb-2 mt-2"> <a href="#Facebook-icon" class=""> <img class="" src="assets/img/Facebook-icon.jpg" alt="facebook-icon" width="30" height="30">www.facebook.com/sc.media.cm</li></a>
-                <li class="mb-2 mt-2"> <a href="#line-icon" class=""> <img class="" src="assets/img/line-icon.jpg" alt="line-icon" width="30" height="30">vhan5581</li></a>
-                <li class="mb-2 mt-2"> <a href="#phone-icon" class=""> <img class="" src="assets/img/phone-icon.png" alt="phone-icon" width="30" height="30">053-327044</li></a>
+                <li class="mb-2 mt-2"> <a href="http://www.facebook.com/sc.media.cm" class=""> <img class="" src="assets/img/Facebook-icon.jpg" alt="facebook-icon" width="30" height="30">sc.media.cm</li></a>
+                <li class="mb-2 mt-2"> <a href="#" class=""> <img class="" src="assets/img/line-icon.jpg" alt="line-icon" width="30" height="30">vhan5581</li></a>
+                <li class="mb-2 mt-2"> <a href="#" class=""> <img class="" src="assets/img/phone-icon.png" alt="phone-icon" width="30" height="30">053-327044</li></a>
 			        </ul>
 			    </div>
 		    </div>
@@ -57,8 +58,8 @@
                    <a class="dropdown-item" href="vinin.html">ไวนิล</a>
                    <a class="dropdown-item" href="stwork.html">สติ๊กเกอร์</a>
                    <a class="dropdown-item" href="light.html">ตู้ไฟ</a>
-                   <a class="dropdown-item" href="nam.html">นามบัตร</a>
-                   <a class="dropdown-item" href="kong.html">โครงเหล็ก</a>
+                   <a class="dropdown-item" href="nam.html">อะคริลิค</a>
+                   <a class="dropdown-item" href="kong.html">พลาสวูด</a>
                  </div>
            </li>
            <li class="nav-item px-5">
@@ -76,8 +77,8 @@
            <div class="homepage-hero-module">
           <div class="video-container">
               <div class="filter"></div>
-              <video id="video1" class="video-js vjs-default-skin center-block" controls preload="auto" poster="assets/img/bg-photo.jpg center-block">
-                <source src="assets/videos/discussing_features.mp4" type="video/mp4" />
+              <video autoplay="true" loop="true" id="video1" class="video-js vjs-default-skin center-block" controls preload="auto" poster="assets/img/bg-photo.jpg center-block">
+                <source src="assets/videos/success.mp4" type="video/mp4" />
                 <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that
                   <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
                 </p>
@@ -93,54 +94,55 @@
 
      <!--  ======= BEGIN HISTORY SUCESS ========= -->
        <div class="history-zone bg-white">
-         <hr>
            <div class="container py-5">
              <h1 class="display-2 text-center font-special-style text-success1 my-3">ประวัติร้าน</h1>
-             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+             <p>ร้านซัคเซสแอดเวอร์ไทซิ่ง เริ่มดำเนินธุรกิจในนาม ห้างหุ้นส่วนจำกัด ซัคเซส มีเดีย เชียงใหม่ ตั้งแต่ปี พ.ศ.2556 เป็นต้นมาจนถึงปัจจุบัน ตั้งอยู่ที่ 17/3 ถนนจ่าบ้าน ตำบลศรีภูมิ อำเภอเมือง จังหวัดเชียงใหม่ โดยซัคเซสแอดเวอร์ไทซิ่ง
+               ดำเนินธุรกิจทั้งงานด้านสื่อโฆษณาและสื่อสิ่งพิมพ์แบบครบวงจร ด้วยทีมงานมืออาชีพเพื่อสร้างความมั่นใจให้แก่ลูกค้า ทั้งด้านการให้คำปรึกษา แนะนำ วางแผน รวมถึงการผลิตทุกขั้นตอน
+               โดยเรามีการเปลี่ยนแปลงและพัฒนาระบบและโครงสร้างอยู่ตลอดเวลา ทั้งด้านบุคลากร ด้านการตลาด และด้านการผลิตในขั้นตอนต่างๆ โดยนำระบบที่ทันสมัยเข้ามาใช้ และเพิ่มบุคลากรในกระบวนการดำเนินการต่างๆ
+               มีการอบรมเพื่อพัฒนาคุณภาพของบุคคลากรอย่างสม่ำเสมอ ทั้งยังนำเอาเครื่องมือหรืออุปกรณ์ต่างๆที่ใช้เทคโนโลยีขั้นสูงเพื่อผลิตงานให้ได้คุณภาพมาตรฐาน สะดวก และรวดเร็วยิ่งขึ้น เพื่อให้ลูกค้าได้รับความพึงพอใจสูงสุด</p>
            </div>
        </div>
      <!--  ======= END HISTORY SUCESS ========= -->
 
         <!-- START THE FEATURETTES -->
                     <div class="container">
-                      <hr>
                       <h1 class="display-2 text-center font-special-style text-success1">ผลงาน</h1>
                       <div class="row">
                         <div class=" col-lg-4 mb-4">
-                            <a href="assets/img-service/full1.jpg" class="image-link" >
-                            <img src="assets/img-service/1.jpg" class="img-fluid" alt="Image 1">
+                            <a href="vinin.html">
+                            <img src="assets/img/1.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                            <div class="text-center"><p>งานไวนิล</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
-                            <a href="assets/img-service/full2.jpg" class="image-link" >
-                            <img src="assets/img-service/2.jpg" class="img-fluid" alt="Image 1">
+                            <a href="vinin.html">
+                            <img src="assets/img/2.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                            <div class="text-center"><p>งานไวนิล</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
-                            <a href="assets/img-service/full3.jpg" class="image-link" >
-                            <img src="assets/img-service/3.jpg" class="img-fluid" alt="Image 1">
+                            <a href="stwork.html">
+                            <img src="assets/img/3.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                            <div class="text-center"><p>งานสติ๊กเกอร์</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
-                            <a href="assets/img-service/full4.jpg" class="image-link" >
-                            <img src="assets/img-service/4.jpg" class="img-fluid" alt="Image 1">
+                            <a href="light.html">
+                            <img src="assets/img/4.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                            <div class="text-center"><p>งานตู้ไฟ</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
-                            <a href="assets/img-service/full5.jpg" class="image-link" >
-                            <img src="assets/img-service/5.jpg" class="img-fluid" alt="Image 1">
+                            <a href="nam.html">
+                            <img src="assets/img/5.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                            <div class="text-center"><p>งานอคริลิค</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
-                            <a href="assets/img-service/full6.jpg" class="image-link" >
-                            <img src="assets/img-service/6.jpg" class="img-fluid" alt="Image 1">
+                            <a href="kong.html">
+                            <img src="assets/img/6.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                          <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                          <div class="text-center"><p>งานพลาสวูด</p></div>
                         </div>
                     </div>
                   </div>
@@ -148,7 +150,6 @@
         <!-- FOOTER -->
         <div class="bg-footer">
           <div class="container pb-3">
-            <hr>
             <h1 class="display-2 text-center font-special-style text-success1">แผนที่</h1>
             <div id="map"></div>
           </div>
