--- a/kong.html
+++ b/kong.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="assets/favicon.ico">
+    <link rel="icon" href="assets/favicon.icon">
 
-    <title>Success media : โครงเหล็ก</title>
+    <title>Success media : พลาสวูด</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -21,14 +21,16 @@
     <header>
         <div class="header-zone">
            <div class="row">
-	            <div class="text-left header-left bg-BG1 col-md-10">
-			       <img class="" src="assets/img/Logo1.png" alt="successLogo" width="250" height="150">
-			    </div>
+             <div class="text-left header-left bg-BG1 col-md-10">
+             <a href="index.html">
+             <img class="" src="assets/img/Logo1.png" alt="successLogo" width="250" height="150">
+             </a>
+         </div>
 			    <div class="header-right col-md-2">
 			        <ul class="list-unstyled">
-                <li class="mb-2 mt-2"> <a href="#Facebook-icon" class=""> <img class="" src="assets/img/Facebook-icon.jpg" alt="facebook-icon" width="30" height="30">www.facebook.com/sc.media.cm</li></a>
-                <li class="mb-2 mt-2"> <a href="#line-icon" class=""> <img class="" src="assets/img/line-icon.jpg" alt="line-icon" width="30" height="30">vhan5581</li></a>
-                <li class="mb-2 mt-2"> <a href="#phone-icon" class=""> <img class="" src="assets/img/phone-icon.png" alt="phone-icon" width="30" height="30">053-327044</li></a>
+                <li class="mb-2 mt-2"> <a href="http://www.facebook.com/sc.media.cm" class=""> <img class="" src="assets/img/Facebook-icon.jpg" alt="facebook-icon" width="30" height="30">sc.media.cm</li></a>
+                <li class="mb-2 mt-2"> <a href="#" class=""> <img class="" src="assets/img/line-icon.jpg" alt="line-icon" width="30" height="30">vhan5581</li></a>
+                <li class="mb-2 mt-2"> <a href="#" class=""> <img class="" src="assets/img/phone-icon.png" alt="phone-icon" width="30" height="30">053-327044</li></a>
 			        </ul>
 			    </div>
 		    </div>
@@ -55,8 +57,8 @@
                     <a class="dropdown-item" href="vinin.html">ไวนิล</a>
                     <a class="dropdown-item" href="stwork.html">สติ๊กเกอร์</a>
                     <a class="dropdown-item" href="light.html">ตู้ไฟ</a>
-                    <a class="dropdown-item" href="nam.html">นามบัตร</a>
-                    <a class="dropdown-item" href="kong.html">โครงเหล็ก</a>
+                    <a class="dropdown-item" href="nam.html">อคริลิค</a>
+                    <a class="dropdown-item" href="kong.html">พลาสวูด</a>
                   </div>
             </li>
             <li class="nav-item px-5">
@@ -71,50 +73,47 @@
 
         <!-- START THE FEATURETTES -->
                     <div class="container">
-                      <hr>
-                      <h1 class="display-2 text-center font-special-style text-success1">โครงเหล็ก</h1>
+                      <h1 class="display-2 text-center font-special-style text-success1">พลาสวูด</h1>
                       <div class="row">
                         <div class="col-lg-6 mb-3">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full1.jpg">
-                            <img src="assets/img-service/1.jpg" class="img-fluid" alt="Image 1">
+                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-work/pw/full1.jpg">
+                            <img src="assets/img-work/pw/1.jpg" class="img-fluid" alt="Image 1">
                             </a>
                         </div>
-                        <div class=" col-lg-6 mb-3">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full2.jpg">
-                             <img src="assets/img-service/2.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-                        <div class=" col-lg-6 mb-3">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full3.jpg">
-                            <img src="assets/img-service/3.jpg" class="img-fluid" alt="Image 1">
-                             </a>
-                        </div>
-
                         <div class="col-lg-6 mb-3">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full4.jpg">
-                            <img src="assets/img-service/4.jpg" class="img-fluid" alt="Image 1">
+                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-work/pw/full2.jpg">
+                            <img src="assets/img-work/pw/2.jpg" class="img-fluid" alt="Image 1">
                             </a>
                         </div>
-                        <div class=" col-lg-6 mb-3">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full5.jpg">
-                             <img src="assets/img-service/5.jpg" class="img-fluid" alt="Image 1">
-                             </a>
+                        <div class="col-lg-6 mb-3">
+                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-work/pw/full3.jpg">
+                            <img src="assets/img-work/pw/3.jpg" class="img-fluid" alt="Image 1">
+                            </a>
                         </div>
-                        <div class=" col-lg-6 mb-3">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full6.jpg">
-                            <img src="assets/img-service/6.jpg" class="img-fluid" alt="Image 1">
-                             </a>
+                        <div class="col-lg-6 mb-3">
+                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-work/pw/full4.jpg">
+                            <img src="assets/img-work/pw/4.jpg" class="img-fluid" alt="Image 1">
+                            </a>
                         </div>
-
-                        <div class=" col-lg-6 mb-3">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full7.jpg">
-                            <img src="assets/img-service/7.jpg" class="img-fluid" alt="Image 1">
-                             </a>
+                        <div class="col-lg-6 mb-3">
+                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-work/pw/full5.jpg">
+                            <img src="assets/img-work/pw/5.jpg" class="img-fluid" alt="Image 1">
+                            </a>
                         </div>
-                        <div class=" col-lg-6 mb-3">
-                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-service/full8.jpg">
-                            <img src="assets/img-service/8.jpg" class="img-fluid" alt="Image 1">
-                             </a>
+                        <div class="col-lg-6 mb-3">
+                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-work/pw/full6.jpg">
+                            <img src="assets/img-work/pw/6.jpg" class="img-fluid" alt="Image 1">
+                            </a>
+                        </div>
+                        <div class="col-lg-6 mb-3">
+                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-work/pw/full7.jpg">
+                            <img src="assets/img-work/pw/7.jpg" class="img-fluid" alt="Image 1">
+                            </a>
+                        </div>
+                        <div class="col-lg-6 mb-3">
+                            <a href="#galleryModal" class="gallery-box" data-toggle="modal" data-src="assets/img-work/pw/full8.jpg">
+                            <img src="assets/img-work/pw/8.jpg" class="img-fluid" alt="Image 1">
+                            </a>
                         </div>
                     </div>
                   </div>
@@ -123,7 +122,6 @@
       <footer class="text-center bg-success1 py-2">
               <div class="text-color"><p>&copy; 2018 Success media All Right Reserved.</p></div>
       </footer>
-    </br>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
