--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="assets/favicon.ico">
+    <link rel="icon" href="assets/favicon.icon">
 
     <title>Success media : บริการ</title>
 
@@ -21,14 +21,16 @@
     <header>
         <div class="header-zone">
            <div class="row">
-	            <div class="text-left header-left bg-BG1 col-md-10">
-			       <img class="" src="assets/img/Logo1.png" alt="successLogo" width="250" height="150">
-			    </div>
+             <div class="text-left header-left bg-BG1 col-md-10">
+             <a href="index.html">
+             <img class="" src="assets/img/Logo1.png" alt="successLogo" width="250" height="150">
+             </a>
+         </div>
 			    <div class="header-right col-md-2">
 			        <ul class="list-unstyled">
-                <li class="mb-2 mt-2"> <a href="#Facebook-icon" class=""> <img class="" src="assets/img/Facebook-icon.jpg" alt="facebook-icon" width="30" height="30">www.facebook.com/sc.media.cm</li></a>
-                <li class="mb-2 mt-2"> <a href="#line-icon" class=""> <img class="" src="assets/img/line-icon.jpg" alt="line-icon" width="30" height="30">vhan5581</li></a>
-                <li class="mb-2 mt-2"> <a href="#phone-icon" class=""> <img class="" src="assets/img/phone-icon.png" alt="phone-icon" width="30" height="30">053-327044</li></a>
+                <li class="mb-2 mt-2"> <a href="http://www.facebook.com/sc.media.cm" class=""> <img class="" src="assets/img/Facebook-icon.jpg" alt="facebook-icon" width="30" height="30">sc.media.cm</li></a>
+                <li class="mb-2 mt-2"> <a href="#" class=""> <img class="" src="assets/img/line-icon.jpg" alt="line-icon" width="30" height="30">vhan5581</li></a>
+                <li class="mb-2 mt-2"> <a href="#" class=""> <img class="" src="assets/img/phone-icon.png" alt="phone-icon" width="30" height="30">053-327044</li></a>
 			        </ul>
 			    </div>
 		    </div>
@@ -55,8 +57,8 @@
                    <a class="dropdown-item" href="vinin.html">ไวนิล</a>
                    <a class="dropdown-item" href="stwork.html">สติ๊กเกอร์</a>
                    <a class="dropdown-item" href="light.html">ตู้ไฟ</a>
-                   <a class="dropdown-item" href="nam.html">นามบัตร</a>
-                   <a class="dropdown-item" href="kong.html">โครงเหล็ก</a>
+                   <a class="dropdown-item" href="nam.html">อะคริลิค</a>
+                   <a class="dropdown-item" href="kong.html">พลาสวูด</a>
                  </div>
            </li>
            <li class="nav-item px-5">
@@ -70,8 +72,11 @@
      </nav>
         <!-- START THE FEATURETTES -->
                     <div class="container">
-                      <hr>
+                      <div class="container py-5">
                       <h1 class="display-2 text-center font-special-style text-success1">บริการ</h1>
+                      <p>สื่อสิ่งพิมพ์สาหรับลูกค้าที่เป็นทั้งบริษัทและรายบุคคล เรามีทีมงานที่มีความเชี่ยวชาญและมีประสบการณ์ที่จะช่วยเปลี่ยนความคิดของคุณ
+                        เราจะคอยให้คำแนะนำในแต่ละขั้นตอนดำเนินการเพื่อให้ลูกค้าทุกท่านได้มั่นใจ ด้วยประสบการณ์และความรู้ทางด้านงานสื่อสิ่งพิมพ์ป้ายไวนิลโฆษณา</P>
+                      </div>
                       <div class="row">
                         <div class=" col-lg-4 mb-4">
                             <a href="assets/img-service/full1.jpg" class="image-link" >
@@ -83,103 +88,103 @@
                             <a href="assets/img-service/full2.jpg" class="image-link" >
                             <img src="assets/img-service/2.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                            <div class="text-center"><p>เมนูอาหาร</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
                             <a href="assets/img-service/full3.jpg" class="image-link" >
                             <img src="assets/img-service/3.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                            <div class="text-center"><p>ป้ายโครงเหล็กติดอักษรพลาสวูด</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
                             <a href="assets/img-service/full4.jpg" class="image-link" >
                             <img src="assets/img-service/4.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                            <div class="text-center"><p>ป้ายโครงเหล็กติดอักษรพลาสวูด</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
                             <a href="assets/img-service/full5.jpg" class="image-link" >
                             <img src="assets/img-service/5.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                            <div class="text-center"><p>ป้ายไวนิลโฆษณา</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
                             <a href="assets/img-service/full6.jpg" class="image-link" >
                             <img src="assets/img-service/6.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                          <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                          <div class="text-center"><p>สติ๊กเกอร์ติดผนัง</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
                             <a href="assets/img-service/full7.jpg" class="image-link" >
                             <img src="assets/img-service/7.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                            <div class="text-center"><p>ตู้ไฟไวนิล</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
                             <a href="assets/img-service/full8.jpg" class="image-link" >
                             <img src="assets/img-service/8.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                            <div class="text-center"><p>สติ๊กเกอร์ C2 ติดกระจก</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
                             <a href="assets/img-service/full9.jpg" class="image-link" >
                             <img src="assets/img-service/9.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                            <div class="text-center"><p>ตู้ไฟอะคริลิคนูน</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
                             <a href="assets/img-service/full10.jpg" class="image-link" >
                             <img src="assets/img-service/10.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                            <div class="text-center"><p>กรอบลอยผ้าแคนวาส</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
                             <a href="assets/img-service/full11.jpg" class="image-link" >
                             <img src="assets/img-service/11.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                            <div class="text-center"><p>ป้ายถือสติ๊กเกอร์รีดPP</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
                             <a href="assets/img-service/full12.jpg" class="image-link" >
                             <img src="assets/img-service/12.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                            <div class="text-center"><p>ตู้ไฟอะคริลิค</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
                             <a href="assets/img-service/full13.jpg" class="image-link" >
                             <img src="assets/img-service/13.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                            <div class="text-center"><p>ตู้ไฟอะคริลิคพร้อมเสายึด</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
                             <a href="assets/img-service/full14.jpg" class="image-link" >
                             <img src="assets/img-service/14.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                            <div class="text-center"><p>ป้ายคัทเอาท์ไวนิล</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
                             <a href="assets/img-service/full15.jpg" class="image-link" >
                             <img src="assets/img-service/15.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                            <div class="text-center"><p>ป้ายไวนิลหน้าร้าน</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
                             <a href="assets/img-service/full16.jpg" class="image-link" >
                             <img src="assets/img-service/16.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                            <div class="text-center"><p>ป้ายไวนิลขึงโครงเหล็ก</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
                             <a href="assets/img-service/full17.jpg" class="image-link" >
                             <img src="assets/img-service/17.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                            <div class="text-center"><p>ป้ายคัทเอาท์ไวนิล</p></div>
                         </div>
                         <div class=" col-lg-4 mb-4">
                             <a href="assets/img-service/full18.jpg" class="image-link" >
                             <img src="assets/img-service/18.jpg" class="img-fluid" alt="Image 1">
                           </a>
-                            <div class="text-center"><p>ไวนิลธงญี่ปุ่น</p></div>
+                            <div class="text-center"><p>อักษรโลหะ</p></div>
                         </div>
                     </div>
                   </div>
