--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="assets/favicon.ico">
+    <link rel="icon" href="assets/favicon.icon">
 
     <title>Success media : ผลงาน</title>
 
@@ -21,14 +21,16 @@
     <header>
         <div class="header-zone">
            <div class="row">
-	            <div class="text-left header-left bg-BG1 col-md-10">
-			       <img class="" src="assets/img/Logo1.png" alt="successLogo" width="250" height="150">
-			    </div>
+             <div class="text-left header-left bg-BG1 col-md-10">
+             <a href="index.html">
+             <img class="" src="assets/img/Logo1.png" alt="successLogo" width="250" height="150">
+             </a>
+         </div>
 			    <div class="header-right col-md-2">
 			        <ul class="list-unstyled">
-                <li class="mb-2 mt-2"> <a href="#Facebook-icon" class=""> <img class="" src="assets/img/Facebook-icon.jpg" alt="facebook-icon" width="30" height="30">www.facebook.com/sc.media.cm</li></a>
-                <li class="mb-2 mt-2"> <a href="#line-icon" class=""> <img class="" src="assets/img/line-icon.jpg" alt="line-icon" width="30" height="30">vhan5581</li></a>
-                <li class="mb-2 mt-2"> <a href="#phone-icon" class=""> <img class="" src="assets/img/phone-icon.png" alt="phone-icon" width="30" height="30">053-327044</li></a>
+                <li class="mb-2 mt-2"> <a href="http://www.facebook.com/sc.media.cm" class=""> <img class="" src="assets/img/Facebook-icon.jpg" alt="facebook-icon" width="30" height="30">sc.media.cm</li></a>
+                <li class="mb-2 mt-2"> <a href="#" class=""> <img class="" src="assets/img/line-icon.jpg" alt="line-icon" width="30" height="30">vhan5581</li></a>
+                <li class="mb-2 mt-2"> <a href="#" class=""> <img class="" src="assets/img/phone-icon.png" alt="phone-icon" width="30" height="30">053-327044</li></a>
 			        </ul>
 			    </div>
 		    </div>
@@ -55,8 +57,8 @@
                     <a class="dropdown-item" href="vinin.html">ไวนิล</a>
                     <a class="dropdown-item" href="stwork.html">สติ๊กเกอร์</a>
                     <a class="dropdown-item" href="light.html">ตู้ไฟ</a>
-                    <a class="dropdown-item" href="nam.html">นามบัตร</a>
-                    <a class="dropdown-item" href="kong.html">โครงเหล็ก</a>
+                    <a class="dropdown-item" href="nam.html">อคริลิค</a>
+                    <a class="dropdown-item" href="kong.html">พลาสวูด</a>
                   </div>
             </li>
             <li class="nav-item px-5">
@@ -71,7 +73,6 @@
 
         <!-- START THE FEATURETTES -->
                     <div class="container">
-                      <hr>
                       <h1 class="display-2 text-center font-special-style text-success1">ผลงาน</h1>
                       <div class="row">
                         <div class="col-lg-6 mb-4">
