--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
              <p>ร้านซัคเซสแอดเวอร์ไทซิ่ง เริ่มดำเนินธุรกิจในนาม ห้างหุ้นส่วนจำกัด ซัคเซส มีเดีย เชียงใหม่ ตั้งแต่ปี พ.ศ.2556 เป็นต้นมาจนถึงปัจจุบัน ตั้งอยู่ที่ 17/3 ถนนจ่าบ้าน ตำบลศรีภูมิ อำเภอเมือง จังหวัดเชียงใหม่ โดยซัคเซสแอดเวอร์ไทซิ่ง
                ดำเนินธุรกิจทั้งงานด้านสื่อโฆษณาและสื่อสิ่งพิมพ์แบบครบวงจร ด้วยทีมงานมืออาชีพเพื่อสร้างความมั่นใจให้แก่ลูกค้า ทั้งด้านการให้คำปรึกษา แนะนำ วางแผน รวมถึงการผลิตทุกขั้นตอน
                โดยเรามีการเปลี่ยนแปลงและพัฒนาระบบและโครงสร้างอยู่ตลอดเวลา ทั้งด้านบุคลากร ด้านการตลาด และด้านการผลิตในขั้นตอนต่างๆ โดยนำระบบที่ทันสมัยเข้ามาใช้ และเพิ่มบุคลากรในกระบวนการดำเนินการต่างๆ
-               มีการอบรมเพื่อพัฒนาคุณภาพของบุคคลากรอย่างสม่ำเสมอ ทั้งยังนำเอาเครื่องมือหรืออุปกรณ์ต่างๆที่ใช้เทคโนโลยีขั้นสูงเพื่อผลิตงานให้ได้คุณภาพมาตรฐาน สะดวก และรวดเร็วยิ่งขึ้น เพื่อให้ลูกค้าได้รับความพึงพอใจสูงสุด</p>
+               มีการอบรมเพื่อพัฒนาคุณภาพของบุคคลากรอย่างสม่ำเสมอ ทั้งยังนำเอาเครื่องมือหรืออุปกรณ์ต่างๆที่ใช้เทคโนโลยีขั้นสูงเพื่อผลิตงานให้ได้คุณภาพมาตรฐาน สะดวก และรวดเร็ว เพื่อให้ลูกค้าได้รับความพึงพอใจสูงสุด</p>
            </div>
        </div>
      <!--  ======= END HISTORY SUCESS ========= -->
