--- a/about.html
+++ b/about.html
@@ -29,9 +29,9 @@
          </div>
 			    <div class="header-right col-md-2">
 			        <ul class="list-unstyled">
-                <li class="mb-2 mt-2"> <a href="http://www.facebook.com/sc.media.cm" class=""> <img class="" src="assets/img/Facebook-icon.jpg" alt="facebook-icon" width="30" height="30">sc.media.cm</li></a>
-                <li class="mb-2 mt-2"> <a href="#" class=""> <img class="" src="assets/img/line-icon.jpg" alt="line-icon" width="30" height="30">vhan5581</li></a>
-                <li class="mb-2 mt-2"> <a href="#" class=""> <img class="" src="assets/img/phone-icon.png" alt="phone-icon" width="30" height="30">053-327044</li></a>
+                <li class="mb-2 mt-2"> <a href="http://www.facebook.com/sc.media.cm" class=""> <img class="" src="assets/img/Facebook-icon.jpg" alt="facebook-icon" width="30" height="30">sc.media.cm</a></li>
+                <li class="mb-2 mt-2"> <a href="#" class=""> <img class="" src="assets/img/line-icon.jpg" alt="line-icon" width="30" height="30">vhan5581</a></li>
+                <li class="mb-2 mt-2"> <a href="#" class=""> <img class="" src="assets/img/phone-icon.png" alt="phone-icon" width="30" height="30">053-327044</a></li>
 			        </ul>
 			    </div>
 		    </div>
