--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <header>
         <div class="header-zone">
            <div class="row">
-	            <div class="text-left header-left bg-BG1 col-md-10">
+	            <div class="text-left header-left bg-bg1 col-md-10">
               <a href="index.html">
-			        <img class="" src="assets/img/Logo1.png" alt="successLogo" width="250" height="150">
+			        <img class="" src="assets/img/logo1.png" alt="successlogo" width="250" height="150">
               </a>
 			    </div>
           <div class="header-right col-md-2">
