--- a/about.html
+++ b/about.html
@@ -22,9 +22,9 @@
     <header>
         <div class="header-zone">
            <div class="row">
-             <div class="text-left header-left bg-BG1 col-md-10">
+             <div class="text-left header-left bg-bg1 col-md-10">
              <a href="index.html">
-             <img class="" src="assets/img/Logo1.png" alt="successLogo" width="250" height="150">
+             <img class="" src="assets/img/logo1.png" alt="successlogo" width="250" height="150">
              </a>
          </div>
 			    <div class="header-right col-md-2">
@@ -75,7 +75,7 @@
       <!--  ======= BEGIN VIDEOS  ========= -->
       <div class="carousel-inner">
          <div class="carousel-item active">
-           <img class="" src="assets/img/Success1.jpg" alt="Responsive image">
+           <img class="" src="assets/img/success1.jpg" alt="Responsive image">
            <div class="container">
              <div class="carousel-caption text-left">
              </div>
@@ -85,7 +85,7 @@
       <!--  ======= END VIDEOS  ========= -->
 
           <div class="carousel-item">
-            <img class="second-slide" src="assets/img/Success1.jpg" alt="Responsive image">
+            <img class="second-slide" src="assets/img/success1.jpg" alt="Responsive image">
             <div class="container">
               <div class="carousel-caption">
                 <h1>Another example headline.</h1>
