--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
            <div class="row">
              <div class="text-left header-left bg-bg1 col-md-10">
              <a href="index.html">
-             <img class="" src="assets/img/Logo1.png" alt="successLogo" width="250" height="150">
+             <img class="" src="assets/img/logo1.png" alt="successlogo" width="250" height="150">
              </a>
          </div>
 			    <div class="header-right col-md-2">
@@ -75,7 +75,7 @@
       <!--  ======= BEGIN VIDEOS  ========= -->
       <div class="carousel-inner">
          <div class="carousel-item active">
-           <img class="" src="assets/img-about/success1.jpg" alt="Responsive image">
+           <img class="" src="assets/img/success1.jpg" alt="Responsive image">
            <div class="container">
              <div class="carousel-caption text-left">
              </div>
