--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     <header>
         <div class="header-zone">
            <div class="row">
-             <div class="text-left header-left bg-bg1 col-md-10">
+             <div class="text-left header-left bg-BG1 col-md-10">
              <a href="index.html">
              <img class="" src="assets/img/logo1.png" alt="successlogo" width="250" height="150">
              </a>
